--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,5 +6,5 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #EBEBEB;
+  background-color: #ebebeb;
 }
